navigation close on clicking outside, fixed sadegh email on mobile, positions box resized for mobile

--- a/scss/components/the-team-sadegh.module.scss
+++ b/scss/components/the-team-sadegh.module.scss
@@ -74,6 +74,8 @@
   }
   @include respond(tab) {
     max-width: 56rem;
+    flex-flow: column wrap;
+    align-items: center;
   }
   @include respond(big-desktop) {
     min-height: 55rem;
